manifests/base/resources/notification-prep/resources/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: notification-prep
    chart: notification-prep-1.0.10
    heritage: Helm
    release: notification-prep
  name: notification-prep
spec:
  replicas: 1
  selector:
    matchLabels:
      app: notification-prep
      release: notification-prep
  template:
    metadata:
      labels:
        app: notification-prep
        release: notification-prep
    spec:
      containers:
      - env:
        - name: KEYS_URI
          valueFrom:
            configMapKeyRef:
              key: keysUri
              name: notification-prep-configs
        - name: JWKS_ENDPOINT
          value: $(KEYS_URI)/v1/keys/qlik.api.internal
        - name: TOKEN_AUTH_PRIVATE_KEY_ID
          valueFrom:
            secretKeyRef:
              key: tokenAuthPrivateKeyId
              name: notification-prep-secrets
        - name: KEY_ID
          value: $(TOKEN_AUTH_PRIVATE_KEY_ID)
        - name: TOKEN_AUTH_PRIVATE_KEY
          valueFrom:
            secretKeyRef:
              key: tokenAuthPrivateKey
              name: notification-prep-secrets
        - name: PRIVATE_KEY
          value: $(TOKEN_AUTH_PRIVATE_KEY)
        - name: TOKEN_AUTH_URI
          valueFrom:
            configMapKeyRef:
              key: tokenAuthUri
              name: notification-prep-configs
        - name: INTERNAL_TOKENS_RESOURCE
          value: $(TOKEN_AUTH_URI)
        - name: NATS_URL
          value: $(NATS_URI)
        - name: NATS_STREAMING_CLUSTER_ID
          valueFrom:
            configMapKeyRef:
              key: natsStreamingClusterId
              name: notification-prep-configs
        - name: NATS_CLUSTER_ID
          value: $(NATS_STREAMING_CLUSTER_ID)
        - name: USERS_URI
          valueFrom:
            configMapKeyRef:
              key: usersUri
              name: notification-prep-configs
        - name: USERS_SERVICE_URL
          value: $(USERS_URI)
        - name: NATS_ENABLED
          value: "true"
        - name: NATS_TOKEN_AUTH_ENABLED
          value: "true"
        - name: NATS_CLIENT_ID
          valueFrom:
            fieldRef:
              fieldPath: metadata.name
        - name: ROLLBAR_ENABLED
          value: "false"
        - name: ROLLBAR_ENV
          value: dev
        - name: ROLLBAR_REGION
          value: local
        image: qliktech-docker.jfrog.io/notification-prep:1.0.9
        imagePullPolicy: IfNotPresent
        livenessProbe:
          httpGet:
            path: /health
            port: http
        name: main
        ports:
        - containerPort: 8080
          name: http
          protocol: TCP
        readinessProbe:
          httpGet:
            path: /ready
            port: http
        resources:
          limits: {}
          requests: {}
      imagePullSecrets:
      - name: artifactory-docker-secret
---
