manifests/base/resources/notification-prep/resources/service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    prometheus.io/port: "8080"
    prometheus.io/scrape: "true"
  labels:
    app: notification-prep
    chart: notification-prep-1.0.10
    heritage: Helm
    release: notification-prep
  name: notification-prep
spec:
  ports:
  - name: notification-prep
    port: 8080
    protocol: TCP
    targetPort: 8080
  selector:
    app: notification-prep
    release: notification-prep
  type: ClusterIP
---
