manifests/base/resources/notification-prep/resources/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/auth-response-headers: Authorization
    nginx.ingress.kubernetes.io/auth-url: http://notification-prep-edge-auth.$(NAMESPACE).svc.cluster.local:8080/v1/auth
    nginx.ingress.kubernetes.io/configuration-snippet: |
      rewrite (?i)/api/(.*) /$1 break;
  labels:
    app: notification-prep
    chart: notification-prep-1.0.10
    heritage: Helm
    release: notification-prep
  name: notification-prep
spec:
  rules:
  - http:
      paths:
      - backend:
          serviceName: notification-prep
          servicePort: 8080
        path: /api/v1/notification-prep
---
